get_post openapi
